QMI: Assertion failed on 3GPP interface enabling (common_enable_disable_unsolicited_events_signal_strength)
ModemManager[27883]: <debug> [modem0] modem has 3GPP capabilities, enabling the Modem 3GPP interface...
(ModemManager:27883): GLib-CRITICAL **: 07:44:49.315: g_array_ref: assertion 'array' failed
Thread 1 "ModemManager" received signal SIGSEGV, Segmentation fault.
0x0000fffff7cb66e0 in __qmi_message_nas_set_event_report_request_create (error=0xfffffffff230, input=0xaaaaaad23210, cid=<optimized out>, transaction_id=<optimized out>) at qmi-nas.c:15898
15898 qmi-nas.c: No such file or directory.
(gdb) bt
#0 0x0000fffff7cb66e0 in __qmi_message_nas_set_event_report_request_create (error=0xfffffffff230, input=0xaaaaaad23210, cid=<optimized out>, transaction_id=<optimized out>) at qmi-nas.c:15898
#1 0x0000fffff7cb66e0 in qmi_client_nas_set_event_report
(self=0xffffe8010c70, input=input@entry=0xaaaaaad23210, timeout=timeout@entry=5, cancellable=cancellable@entry=0x0, callback=callback@entry=0xaaaaaab75dc8 <ser_signal_strength_ready>, user_data=user_data@entry=0xaaaaaac726e0) at qmi-nas.c:50979
#2 0x0000aaaaaab76074 in common_enable_disable_unsolicited_events_signal_strength (task=0xaaaaaac726e0) at mm-broadband-modem-qmi.c:4760
#3 0x0000aaaaaab76074 in common_enable_disable_unsolicited_events (self=<optimized out>, enable=1, callback=<optimized out>, user_data=<optimized out>) at mm-broadband-modem-qmi.c:4903
#4 0x0000aaaaaab24e54 in interface_enabling_step (task=0xffffe00045b0) at mm-iface-modem-3gpp.c:2164
#5 0x0000aaaaaab24e54 in interface_enabling_step (task=0xffffe00045b0) at mm-iface-modem-3gpp.c:2130
#6 0x0000aaaaaab25470 in setup_unsolicited_events_ready (self=0xaaaaaacf0370, res=0xaaaaaac66b70, task=0xffffe00045b0) at mm-iface-modem-3gpp.c:2025
#7 0x0000fffff79ce270 in () at /lib/aarch64-linux-gnu/libgio-2.0.so.0
#8 0x0000fffff79ce2bc in () at /lib/aarch64-linux-gnu/libgio-2.0.so.0
#9 0x0000fffff77d851c in g_main_context_dispatch () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
#10 0x0000fffff77d88e8 in () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
#11 0x0000fffff77d8c80 in g_main_loop_run () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
#12 0x0000aaaaaaaf3bb0 in main (argc=<optimized out>, argv=<optimized out>) at main.c:206
(gdb)
ModemManager from master (c6d213d6), libqmi 1.26, modem BroadMobi BM818.
Edited by Sebastian Krzyszkowiak