broadband-modem-qmi: fix assertion when disabling unsolicited events

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/230